1999-11-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: (RereadManual) new method to stop
	  the driver wasting data when REST is not supported;
	  (norest_manual) new member; (device_prefix_len) new protected method;
	  use it in Chdir.
	* FtpGlob.cc: implement files_only.
	* FtpSplitList.cc, HttpDir.cc: use RereadManual.
	* Http.cc: support norest_manual.
	* ascii_ctype.h: add to_ascii_lower.
	* buffer.cc, buffer.h: (Empty) new method.
	* complete.cc: use DirectoriesOnly for `cd' command.
	* ftpclass.cc, ftpclass.h: better support for vms; remember that
	  MDTM or SIZE is not supported; implement ftp:rest-stor setting;
	  add closure to ftp:rest-list setting.
	* resource.cc: ftp:rest-stor setting.

1999-11-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, FtpGlob.cc, FtpGlob.h, FtpListInfo.cc,
	  FtpListInfo.h, FtpSplitList.cc, FtpSplitList.h, Makefile.am:
	  redesign FtpGlob class to use FtpListInfo class; FtpListInfo now
	  uses more specialized FtpSplitList instead of FtpGlob;
	  (Glob::dirs_only) new member, implemented simple type filter.

1999-10-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.h, Http.cc: (use_head) new member; hftp:use-head new setting;
	  use GET instead of HEAD if !use_head.
	* resource.cc: (hftp:use-head) new setting.

1999-10-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: compare ftp:// with hftp:// properly.

1999-10-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: (AnonymousLogin) reset cwd and home.
	* Http.h, Http.cc: add HFtp::Login; don't send password in URI.
	* commands.cc: do Login after Connect, not reverse.

1999-10-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: set hour/minute to 0 if they are not available.
	* Http.cc: avoid memory leak in encode_string; add support for
	  non-anonymous ftp over http.
	* url.cc: (url::encode_string) don't malloc buffer;
	  quote all if quote==0.
